chore: update README and Dockerfile
Signed-off-by: sanglee97 <admin@example.com>